--- a/app/templates/ip_assets_list.html
+++ b/app/templates/ip_assets_list.html
@@ -73,7 +73,7 @@
           <td class="asset-actions-cell">
             <details class="row-actions-menu">
               <summary class="row-actions-trigger" aria-label="Open actions for {{ asset.ip_address }}">
-                <span aria-hidden="true">⋮</span>
+                <span class="row-actions-icon" aria-hidden="true">⋮</span>
               </summary>
               <div class="row-actions-panel" role="menu" aria-label="Actions for {{ asset.ip_address }}">
                 <a class="row-action-item" role="menuitem" href="/ui/ip-assets/{{ asset.id }}/edit">
