--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,7 @@
       <a class="nav-link{% if active_nav == 'projects' %} nav-link-active{% endif %}" href="/ui/projects">Projects</a>
       <a class="nav-link{% if active_nav == 'vendors' %} nav-link-active{% endif %}" href="/ui/vendors">Vendors</a>
       <a class="nav-link{% if active_nav == 'hosts' %} nav-link-active{% endif %}" href="/ui/hosts">Hosts</a>
+      <a class="nav-link{% if active_nav == 'export' %} nav-link-active{% endif %}" href="/ui/export">Export</a>
     </nav>
     <div class="sidebar-footer">
       <div class="sidebar-account">
