--- a/app/static/app.css
+++ b/app/static/app.css
@@ -594,9 +594,7 @@ p {
 }
 
 .row-actions-panel {
-  position: absolute;
-  right: 0;
-  top: calc(100% + 6px);
+  position: fixed;
   min-width: 180px;
   background: #fff;
   border: 1px solid var(--color-border);
