--- a/app/templates/ip_assets_list.html
+++ b/app/templates/ip_assets_list.html
@@ -65,7 +65,10 @@
             {% if asset.project_unassigned %}
             <span class="tag tag-warning">Unassigned</span>
             {% else %}
-            <span class="tag">{{ asset.project_name }}</span>
+            <span class="tag tag-project" style="--project-color: {{ asset.project_color or '#94a3b8' }}">
+              <span class="project-color-dot" aria-hidden="true"></span>
+              {{ asset.project_name }}
+            </span>
             {% endif %}
           </td>
           <td class="muted">{{ asset.type }}</td>
