--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,7 @@
       <a class="nav-link{% if active_nav == 'vendors' %} nav-link-active{% endif %}" href="/ui/vendors">Vendors</a>
       <a class="nav-link{% if active_nav == 'hosts' %} nav-link-active{% endif %}" href="/ui/hosts">Hosts</a>
       <a class="nav-link{% if active_nav == 'export' %} nav-link-active{% endif %}" href="/ui/export">Export</a>
+      <a class="nav-link{% if active_nav == 'import' %} nav-link-active{% endif %}" href="/ui/import">Import</a>
     </nav>
     <div class="sidebar-footer">
       <div class="sidebar-account">
