Add sample CSV downloads to import page

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -76,6 +76,12 @@
     <div>
       <h2>Import CSV</h2>
       <p class="subtitle">Upload hosts.csv and ip-assets.csv exports together.</p>
+      <p class="subtitle">
+        Sample files:
+        <a class="link" href="/static/samples/hosts.csv" download>hosts.csv</a>
+        and
+        <a class="link" href="/static/samples/ip-assets.csv" download>ip-assets.csv</a>
+      </p>
     </div>
   </div>
   <div class="card-body">
