Allow single CSV imports

--- a/app/templates/import.html
+++ b/app/templates/import.html
@@ -75,7 +75,7 @@
   <div class="card-header">
     <div>
       <h2>Import CSV</h2>
-      <p class="subtitle">Upload hosts.csv and ip-assets.csv exports together.</p>
+      <p class="subtitle">Upload hosts.csv and/or ip-assets.csv exports.</p>
       <p class="subtitle">
         Sample files:
         <a class="link" href="/static/samples/hosts.csv" download>hosts.csv</a>
